[css-grid] Fix percentage height on grid item's children

Grid items can be vertically stretched in that case
they store its height on LayoutBox::overrideLogicalContentHeight().
In order to resolve the percentage height on the grid item's children
we need to use that size.

BUG=612755
TEST=fast/css-grid-layout/percent-resolution-grid-item-children.html

Review-Url: https://codereview.chromium.org/2039223002
Cr-Commit-Position: refs/heads/master@{#398971}

Former-commit-id: 8df0592ed1d737d3d9db4b704ffe8d033f14ac28